# nawal-ai

./: .coveragerc  .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AZURE_ACTION_ITEMS.md  CONFIG_FILES_AUDIT.md  CONTRIBUTING.md  Dockerfile  GREEN_LIGHT_EXTRACTION.md  LICENSE  PAKIT_DAG_MIGRATION.md  README.md  __init__.py  api_server.py  config.dev.yaml  config.prod.yaml  config.py  model_builder.py  nawal_types.py  orchestrator.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  types.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml  deploy.yml  docker.yml  publish.yml  security.yml
action/: __init__.py  executor.py  interfaces.py  layer.py  tool_registry.py
action/tools/: __init__.py  code_sandbox.py  memory_tool.py  web_search.py
api/: __init__.py  inference_server.py
architecture/: __init__.py  attention.py  config.py  embeddings.py  feedforward.py  transformer.py
blockchain/: __init__.py  community_connector.py  events.py  genome_registry.py  identity_verifier.py  mesh_network.py  payroll_connector.py  rewards.py  staking_connector.py  staking_interface.py  substrate_client.py  validator_manager.py
cli/: __init__.py  commands.py  config_manager.py
client/: __init__.py  data_loader.py  domain_models.py  genome_trainer.py  model.py  nawal.py  train.py
control/: __init__.py  controller.py  executor.py  goal_stack.py  interfaces.py  planner.py
cortex/: __init__.py
data/: __init__.py  data_manager.py  preprocessing.py  tokenizers.py
data/belize_corpus/: belize_core_knowledge.txt
data/participants/p42/: train.json
docs/: NAWAL_BRAIN_IMPLEMENTATION_PLAN.md  README.md
docs/architecture/: blockchain-integration.md  federated-learning.md  overview.md
docs/archive/: 2026-01-31-extraction-readiness.md  2026-02-11-audit-report.md  2026-02-11-azure-audit.md  2026-02-11-cleanup-summary.md  2026-02-13-completion-summary.md
docs/audits/: 2026-02-13-alignment-audit.md  2026-02-28-catastrophic-audit.md  b15_valuation_tokenomics.md  remaining-findings-remediation-plan.md
docs/development/: roadmap.md
docs/guides/: deployment.md  mesh-and-payroll-quickstart.md  mesh-networking.md  payroll-integration.md
docs/reference/: api-reference.md  configuration.md  quick-reference.md
examples/: complete_evolution.py  complete_training.py  mesh_network_example.py  payroll_example.py
genome/: README.md  __init__.py  dna.py  encoding.py  fitness.py  history.py  model_builder.py  model_builder_stub.py  nawal_adapter.py  operators.py  population.py
hybrid/: __init__.py  confidence.py  engine.py  router.py  sovereignty_metrics.py  teacher.py
integration/: __init__.py  kinich_connector.py  oracle_pipeline.py
k8s/: deployment.yaml  pvc.yaml  service.yaml
maintenance/: __init__.py  drift_detector.py  input_screener.py  interfaces.py  layer.py  output_filter.py  self_repair.py
memory/: __init__.py  episodic.py  interfaces.py  manager.py  semantic.py  working.py
metacognition/: __init__.py  confidence_calibrator.py  consistency_checker.py  identity_module.py  interfaces.py  internal_simulator.py  layer.py  self_critic.py
models/: __init__.py  hybrid_llm.py
monitoring/: __init__.py  logging_config.py  metrics.py  metrics_collector.py  prometheus_exporter.py
nawal/: __init__.py
perception/: __init__.py  auditory_cortex.py  interfaces.py  multimodal_cortex.py  sensory_hub.py  text_cortex.py  visual_cortex.py
quantum/: __init__.py  hybrid_llm.py  kinich_connector.py  quantum_anomaly.py  quantum_imagination.py  quantum_memory.py  quantum_optimizer.py
security/: __init__.py  byzantine_detection.py  differential_privacy.py  dp_inference.py  secure_aggregation.py
server/: README.md  __init__.py  aggregator.py  metrics_tracker.py  participant_manager.py
storage/: __init__.py  checkpoint_manager.py  metrics_db.py  pakit_client.py
tests/: README.md  __init__.py  conftest.py  test_action.py  test_action_layer_genome_operators.py  test_api.py  test_api_server_cortex.py  test_b10_blockchain_pouw.py  test_b11_storage_pakit.py  test_b12_quantum_kinich.py  test_b13_monitoring_maintenance_metacognition.py  test_b15_valuation_tokenomics.py  test_b6_memory_perception_cortex.py  test_b7_federated_learning.py  test_b8_security_privacy.py  test_b9_mesh_networking.py  test_blockchain.py  test_blockchain_coverage_gaps.py  test_blockchain_data_cli.py  test_blockchain_substrate_real_mode.py  test_blockchain_substrate_validators.py  test_byzantine_detection.py  test_cli_coverage_gaps.py  test_client_coverage_gaps.py  test_config_genome_history.py  test_control.py  test_data_leakage.py  test_data_poisoning.py  test_data_preprocessing_extended.py  test_differential_privacy.py  test_distillation.py  test_distillation_extra.py  test_evolution.py  test_federation.py  test_genome.py  test_genome_trainer_domain_models.py  test_hybrid.py  test_integration_brain.py  test_integration_coverage_gaps.py  test_maintenance.py  (+25 more)
training/: __init__.py  distillation.py
valuation/: __init__.py  interfaces.py  reward.py  safety.py
