[build-system]
requires = ["setuptools>=75.8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nawal-ai"
version = "1.1.0"
description = "Sovereign AI with pure transformer architecture, hybrid teacher-student system, federated learning, mesh networking, and ZK-proof payroll for BelizeChain"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "BelizeChain Core Team", email = "dev@belizechain.org"}
]
maintainers = [
    {name = "BelizeChain Core Team", email = "dev@belizechain.org"}
]
keywords = [
    "artificial intelligence",
    "federated learning",
    "privacy-preserving ML",
    "sovereign AI",
    "evolutionary algorithms",
    "knowledge distillation",
    "transformer models",
    "multilingual NLP",
    "hybrid AI",
    "teacher-student learning",
    "genome evolution"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Distributed Computing",
    "Topic :: Security :: Cryptography",
    "Operating System :: OS Independent",
]

dependencies = [
    # Core ML frameworks
    "torch>=2.5.0,<3.0.0",
    "torchvision>=0.20.0,<1.0.0",
    "transformers>=4.45.0,<5.0.0",
    "datasets>=3.0.0,<4.0.0",
    "accelerate>=1.0.0,<2.0.0",
    "huggingface-hub>=0.25.0,<1.0.0",

    # Federated learning
    "flwr[simulation]>=1.11.0,<2.0.0",

    # Blockchain integration
    "substrate-interface>=1.7.9,<2.0.0",

    # Security & privacy
    "cryptography>=42.0.4,<48.0.0",
    "pynacl>=1.5.0,<2.0.0",
    "opacus>=1.5.0,<2.0.0",
    "pycryptodome>=3.19.0,<4.0.0",

    # Data processing & ML utilities
    "numpy>=2.1.0,<3.0.0",
    "pandas>=2.2.0,<3.0.0",
    "scikit-learn>=1.5.0,<2.0.0",
    "scipy>=1.14.0,<2.0.0",

    # Configuration & validation
    "pyyaml>=6.0.2,<7.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "pydantic>=2.9.0,<3.0.0",
    "pydantic-settings>=2.5.0,<3.0.0",

    # Logging & observability
    "structlog>=24.4.0,<25.0.0",
    "rich>=13.9.0,<14.0.0",
    "loguru>=0.7.0,<1.0.0",

    # Serialization
    "msgpack>=1.1.0,<2.0.0",
    "orjson>=3.10.0,<4.0.0",

    # Async networking
    "aiohttp>=3.10.0,<4.0.0",
    "websockets>=13.1.0,<14.0.0",

    # Secure code sandbox
    "RestrictedPython>=7.5,<8.0",

    # gRPC for federated communication
    "grpcio>=1.67.0,<2.0.0",
    "protobuf>=4.21.6,<6.0.0",

    # Monitoring
    "prometheus-client>=0.17.0,<1.0.0",
    "psutil>=5.9.0,<6.0.0",
]

[project.optional-dependencies]
# Development tools
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "pytest-xdist>=3.6.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]

# API server
server = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.31.0",
    "python-multipart>=0.0.9",
]

# Visualization & monitoring
monitoring = [
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "plotly>=5.24.0",
    "tensorboard>=2.17.0",
    "wandb>=0.18.0",
]

# Azure Application Insights (optional APM)
azure = [
    "azure-monitor-opentelemetry>=1.6.0",
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
]

# DeepSeek teacher model support
deepseek = [
    "vllm>=0.6.0",  # Fast inference for large models
    "bitsandbytes>=0.44.0",  # Quantization
    "sentencepiece>=0.2.0",  # Tokenization
]

# Advanced model compression
compression = [
    "bitsandbytes>=0.44.0",
    "auto-gptq>=0.7.0",
    "optimum>=1.23.0",
]

# Memory subsystem backends (Phase 1+)
memory = [
    "chromadb>=0.5.0",          # episodic vector DB (local)
    "qdrant-client>=1.12.0",    # episodic vector DB (server)
    "rank-bm25>=0.2.2",         # BM25 sparse retrieval for semantic memory
    "networkx>=3.4.0",          # knowledge graph (semantic memory)
]

# All optional dependencies
all = [
    "nawal-ai[dev,server,monitoring,azure,deepseek,compression,memory]",
]

[project.urls]
Homepage = "https://github.com/BelizeChain/nawal-ai"
Documentation = "https://github.com/BelizeChain/nawal-ai#readme"
Repository = "https://github.com/BelizeChain/nawal-ai"
"Bug Tracker" = "https://github.com/BelizeChain/nawal-ai/issues"
Changelog = "https://github.com/BelizeChain/nawal-ai/blob/main/CHANGELOG.md"

[project.scripts]
nawal = "nawal.orchestrator:main"
nawal-server = "nawal.orchestrator:main"
nawal-client = "nawal.client.trainer:main"
nawal-hybrid = "nawal.hybrid.engine:main"  # Hybrid engine CLI

[tool.setuptools.packages.find]
exclude = ["tests*", "docs*", "examples*"]

# ============================================================================
# Ruff Configuration
# ============================================================================
[tool.ruff]
line-length = 100
target-version = "py311"
src = [".", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = [
    "E501",   # line too long (handled by black)
    "E402",   # module-level import not at top (conditional imports)
    "E741",   # ambiguous variable name (common in ML: l, I, O)
    "B008",   # function call in default arg
    "B904",   # raise without from in except
    "B017",   # assertRaises(Exception) too broad
    "B023",   # function definition does not bind loop variable
    "B007",   # unused loop variable
    "N801",   # class name should use CapWords (ML convention)
    "N802",   # function name should be lowercase
    "N803",   # argument name should be lowercase (ML: X, T)
    "N806",   # variable in function should be lowercase (ML: X, T)
    "N811",   # constant imported as non-constant
    "N812",   # lowercase imported as non-lowercase
    "N814",   # camelCase imported as constant
    "N817",   # CamelCase imported as acronym
    "RUF001", # ambiguous unicode character in string
    "RUF002", # ambiguous unicode character in docstring
    "RUF003", # ambiguous unicode character in comment
    "RUF006", # asyncio.create_task without reference (fire-and-forget)
    "RUF012", # mutable class variable without ClassVar
    "RUF043", # regex pattern metacharacters not escaped
    "RUF059", # unpacked variable never used
    "SIM102", # nested if (style preference)
    "SIM105", # use contextlib.suppress (style preference)
    "SIM108", # use ternary operator (readability)
    "SIM115", # use context handler for open (style preference)
    "SIM117", # nested with statements (style preference)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.ruff.lint.isort]
known-first-party = [
    "core", "api", "blockchain", "client", "hybrid", "models",
    # Brain architecture modules (Phase 0+)
    "quantum", "cortex", "memory", "control", "perception",
    "valuation", "metacognition", "action", "maintenance",
    # Existing top-level modules
    "architecture", "genome", "integration", "security",
    "server", "storage", "monitoring", "data", "training",
]

# ============================================================================
# isort Configuration (standalone — must match ruff.lint.isort)
# ============================================================================
[tool.isort]
profile = "black"
line_length = 100
known_first_party = [
    "core", "api", "blockchain", "client", "hybrid", "models",
    "quantum", "cortex", "memory", "control", "perception",
    "valuation", "metacognition", "action", "maintenance",
    "architecture", "genome", "integration", "security",
    "server", "storage", "monitoring", "data", "training",
]
skip = ["tests", "venv", ".venv"]

# ============================================================================
# Black Configuration
# ============================================================================
[tool.black]
line-length = 100
target-version = ["py311"]

# ============================================================================
# MyPy Configuration
# ============================================================================
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "transformers.*",
    "torch.*",
    "flwr.*",
    "substrate_interface.*",
    "opacus.*",
]
ignore_missing_imports = true

# ============================================================================
# Pytest Configuration
# ============================================================================
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=action",
    "--cov=api",
    "--cov=architecture",
    "--cov=blockchain",
    "--cov=cli",
    "--cov=client",
    "--cov=control",
    "--cov=genome",
    "--cov=maintenance",
    "--cov=memory",
    "--cov=metacognition",
    "--cov=nawal",
    "--cov=perception",
    "--cov=quantum",
    "--cov=security",
    "--cov=storage",
    "--cov=training",
    "--cov=valuation",
    "--cov=hybrid",
    "--cov=integration",
    "--cov=monitoring",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "-v",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "blockchain: marks tests requiring blockchain connection",
    "gpu: marks tests requiring GPU",
]
asyncio_mode = "auto"
filterwarnings = [
    # DNA compat-wrapper emits DeprecationWarning at call site (stacklevel=2)
    "ignore:DNA is deprecated:DeprecationWarning",
    # Protobuf metaclass deprecation — third-party, fixed upstream in protobuf≥5
    "ignore:.*PyType_Spec.*:DeprecationWarning",
    # Placeholder ZK proofs warn intentionally during tests
    "ignore:Using PLACEHOLDER:UserWarning",
    # MeshNetworkClient background coroutines interacting with mock GC
    "ignore:coroutine 'MeshNetworkClient\\._.*' was never awaited:RuntimeWarning",
    # torch clip_grad_norm_ with empty model parameters during test
    "ignore:`parameters` is an empty generator:UserWarning",
]

# ============================================================================
# Coverage Configuration
# ============================================================================
[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/examples/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/htmlcov/*",
    "*/checkpoints/*",
    "*/logs/*",
    "*/models/*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
